[doc]: 整理 android 文档